--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "atwrap",
-    "version": "0.1.0",
-    "description": "blah",
+    "version": "0.1.1",
+    "description": "a wrapper for common airtable functions, promisified",
     "main": "index.js",
     "directories": {
         "lib": "lib"
@@ -9,6 +9,10 @@
     "scripts": {
         "build": "babel lib/main.js --out-file index.js",
         "test": "npm run build && mocha"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/zxol/atwrap.git"
     },
     "author": "OnePointNever",
     "license": "UNLICENSED",
